--- a/tests/Invisionware.Net.Tests/packages.config
+++ b/tests/Invisionware.Net.Tests/packages.config
@@ -4,4 +4,5 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
 </packages>
